.archive/home/n8n/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: n8n
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: n8n
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
        - matchLabels:
            app.kubernetes.io/name: glance
      toPorts:
        - ports:
            - port: "5678"
              protocol: TCP
    # same-node ClusterIP replies miss CT reverse-xlate (socketLB
    # hostNamespaceOnly + endpointRoutes) and hit ingress policy
    - fromEndpoints:
        - matchLabels:
            cnpg.io/cluster: postgres-1
            io.kubernetes.pod.namespace: database
        - matchLabels:
            app.kubernetes.io/name: miniflux
        - matchLabels:
            app.kubernetes.io/name: ntfy
        - matchLabels:
            io.kubernetes.pod.namespace: ai
            app.kubernetes.io/name: llama-cpp
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
            cnpg.io/cluster: postgres-1
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: miniflux
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ntfy
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ai
            app.kubernetes.io/name: llama-cpp
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # workflow nodes call external APIs
    - toEntities: ["world"]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
